--- a/BBWebProject/BBWebProject/Pages/HomePages/Contact.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Contact.cshtml
@@ -58,36 +58,7 @@
         <!-- Spinner End -->
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
-                    <div class="color">
-                        <img src="~/img/bar_and_bite.png" alt="Bar and Bite Image">
-                    </div>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="fa fa-bars"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto py-0 pe-4">
-                        <a href="/Index" class="nav-item nav-link ">Home</a>
-                        <a href="/HomePages/About" class="nav-item nav-link">About</a>
-                        @* <a href="/HomePages/Menu" class="nav-item nav-link">Menu</a> *@
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Menu</a>
-                            <div class="dropdown-menu m-0">
-                                @foreach (var item in Model.categories)
-                                {
-
-                                    <a href="/HomePages/Service" class="dropdown-item">@item.Name</a>
-
-                                }
-                            </div>
-                        </div>
-                        <a href="/HomePages/Contact" class="nav-item nav-link active">Contact</a>
-                    </div>
-                    <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Place Order</a>
-                </div>
-            </nav>
+     
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
                     <h1 class="display-3 text-white mb-3 animated slideInDown">Contact Us</h1>
@@ -126,16 +97,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
-                        <iframe class="position-relative rounded w-100 h-100"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                                frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
-                                tabindex="0"></iframe>
-                    </div>
+                    
                     <div class="col-md-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                            <img src="~/img/location.jpg" alt="Location" width="550" height="400">
+                            <img src="~/img/Shahi Paneer.jpg" alt="Location" width="550" height="450">
                         </div>
+                    </div>
+                    <div class="col-md-6 wow fadeIn" data-wow-delay="0.1s">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.667883905437!2d73.90301187517787!3d33.51001694616769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e0219a2f1e49cd%3A0xa13d9198be380634!2sBar%20N%20Bite%20Cafe!5e0!3m2!1sen!2s!4v1716819234172!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
