--- a/BBWebProject/BBWebProject/Pages/Feedback.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Feedback.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model BBWebProject.Pages.FeedbackModel
 @{
+    Layout = null;
 }
 <!doctype html>
 <html lang="en">
@@ -345,32 +346,33 @@
         <div class="col-md-12">
           <div class="form h-100">
             <h3>Feedback</h3>
-            <form class="mb-5" method="post">
+            <form class="mb-5" method="post" asp-page-handler="Create">
               <div class="row">
                 <div class="col-md-6 form-group mb-3">
-                  <label for="" class="col-form-label">Name *</label>
-                  <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
+                  <label asp-for="@Model.testimonial.Name" class="col-form-label">Name *</label>
+                                    <input asp-for="@Model.testimonial.Name" class="form-control" placeholder="Your name">
                 </div>
                 <div class="col-md-6 form-group mb-3">
-                  <label for="" class="col-form-label">Email *</label>
-                  <input type="text" class="form-control" name="email" id="email" placeholder="Your email">
+                  <label asp-for="@Model.testimonial.Profession" class="col-form-label">Profession *</label>
+                  <input asp-for="@Model.testimonial.Profession" class="form-control" placeholder="Your Professional">
                 </div>
               </div>
 
               <div class="row">
                 <div class="col-md-12 form-group mb-3">
-                  <label for="message" class="col-form-label">Message *</label>
-                  <textarea class="form-control" name="message" id="message" cols="30" rows="4"
+                    <small>Write Max 15 words</small>
+                    <label asp-for="@Model.testimonial.Review" class="col-form-label">Message *</label>
+                    <textarea asp-for="@Model.testimonial.Review" class="form-control" cols="30" rows="4"
                     placeholder="Write your message"></textarea>
                 </div>
               </div>
-              <div class="row">
+              <button type="submit">Submit</button>
+             @*  <div class="row">
                 <div class="col-md-12 form-group">
-                  <input type="submit" onclick="openpopup()" value="Send Message"
-                    class="btn btn-primary rounded-0 py-2 px-4">
+                  <button type="submit" class="btn btn-primary rounded-0 py-2 px-4">Submit</button>
                   <span class="submitting"></span>
                 </div>
-              </div>
+              </div> *@
             </form>
 
             <div id="form-message-warning mt-4"></div>
@@ -400,7 +402,7 @@
   </div>
 
 
-  <script>
+ @*  <script>
     let popup = document.getElementById("popup");
 
     function openpopup() {
@@ -426,7 +428,7 @@
     // Add event listener to form submission
     document.querySelector('form').addEventListener('submit', submitForm);
   </script>
-
+ *@
 
 
   <script src="js/jquery-3.3.1.min.js"></script>
