--- a/BBWebProject/BBWebProject/Pages/HomePages/Itemshow.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Itemshow.cshtml
@@ -7,7 +7,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Restoran - Bootstrap Restaurant Template</title>
+    <title>Items - Bar & Bite</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
