--- a/BBWebProject/BBWebProject/Pages/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Index.cshtml
@@ -50,6 +50,9 @@
             height: 200px; /* Set your desired height */
             object-fit: cover;
         }
+         *{
+            user-select: none;
+            }
 
     </style>
 </head>
@@ -603,6 +606,7 @@
 
     <!-- Template Javascript -->
     <script src="~/js/main.js"></script>
+    <script src='https://widgets.sociablekit.com/instagram-feed/widget.js' async defer></script>
 </body>
 
 </html>
