--- a/BBWebProject/BBWebProject/Pages/HomePages/Itemshow.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Itemshow.cshtml
@@ -44,6 +44,23 @@
                 width: 100px;
             }
 
+        .image-card {
+            display: flex;
+            justify-content: center;
+            margin-top:-30px;
+            margin-bottom:5px;
+        }
+
+            .image-card img {
+                height: 100px;
+                width: 100px;
+                border-radius: 70px;
+                
+            }
+
+        * {
+            user-select: none;
+        }
     </style>
 </head>
 
@@ -85,7 +102,9 @@
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
-                                <img src="~/img/bar_and_bite.png" width="100px" />
+                                <div class="image-card">
+                                    <img src="~/images/danyal.png" />
+                                </div>
                                 <h5>Quality Food</h5>
                                 <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
                             </div>
