--- a/BBWebProject/BBWebProject/Pages/Shared/_Layout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
             </div>
             <a href="/HomePages/Contact" class="nav-item nav-link">Contact</a>
         </div>
-        <a href="/HomePages/Booking" class="btn btn-primary py-2 px-4">Place Order</a>
+        <a href="/HomePages/Service" class="btn btn-primary py-2 px-4">Place Order</a>
+        
+        <svg xmlns="http://www.w3.org/2000/svg" height="40" width="40" style="padding-left:10px;" viewBox="0 0 576 512"><path fill="#e24b4b" d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" /></svg>
+
     </div>
 </nav>
 @RenderBody()
@@ -60,12 +63,7 @@
                 <p>10AM - 08PM</p>
             </div>
             <div class="col-lg-3 col-md-6">
-                <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Newsletter</h4>
-                <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                <div class="position-relative mx-auto" style="max-width: 400px;">
-                    <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                </div>
+                <iframe src='https://widgets.sociablekit.com/instagram-feed/iframe/25419282' frameborder='0' width='300px' height='300px'></iframe>
             </div>
         </div>
     </div>
