--- a/BBWebProject/BBWebProject/Pages/HomePages/Category.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Category.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BBWebProject.Pages.HomePages.ItemshowModel
+@model BBWebProject.Pages.HomePages.CategoryModel
 @{
 }
 <!DOCTYPE html>
@@ -47,15 +47,14 @@
         .image-card {
             display: flex;
             justify-content: center;
-            margin-top:-30px;
-            margin-bottom:5px;
+            margin-top: -30px;
+            margin-bottom: 5px;
         }
 
             .image-card img {
                 height: 100px;
                 width: 100px;
                 border-radius: 70px;
-                
             }
 
         * {
@@ -98,7 +97,7 @@
                     <h1 class="mb-5">Explore Our Food</h1>
                 </div>
                 <div class="row g-4">
-                   
+
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item rounded pt-3">
                             <div class="p-4">
@@ -110,13 +109,12 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
         <!-- Service End -->
         <!-- Footer Start -->
-   
         <!-- Footer End -->
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
