--- a/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BBWebProject.Pages.HomePages.ServiceModel
+@model BBWebProject.Pages.HomePages.ItemsModel
 @{
 }
 <!DOCTYPE html>
@@ -47,6 +47,7 @@
         * {
             user-select: none;
         }
+
         .image-card {
             display: flex;
             justify-content: center;
@@ -58,12 +59,11 @@
                 border-radius: 70px;
             }
 
-       select {
+        select {
             background-color: red;
-           padding:8px;
-           border:none;
-           border-radius:5px;
-
+            padding: 8px;
+            border: none;
+            border-radius: 5px;
         }
 
 
@@ -93,8 +93,6 @@
             overflow: hidden;
             box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.103);
             position: relative;
-           
-
         }
 
             .CartBtn.active {
@@ -222,7 +220,7 @@
                                                 <option class="dropdown-item" value="Large" href="#">Large</option>
                                             </select>
 
-                                           
+
                                         </div>
                                         <div class="col-md-6 d-flex justify-content-center align-items-center">
                                             <button class="CartBtn">
