--- a/BBWebProject/BBWebProject/Pages/HomePages/Category.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Category.cshtml
@@ -77,7 +77,7 @@
 
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Pizza</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Category Menu</h1>
                   @*   <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -96,19 +96,23 @@
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Our Foods</h5>
                     <h1 class="mb-5">Explore Our Food</h1>
                 </div>
+                
                 <div class="row g-4">
 
-                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="service-item rounded pt-3">
-                            <div class="p-4">
-                                <div class="image-card">
-                                    <img src="~/images/danyal.png" />
+                    @foreach (var item in Model.categories)
+                    {
+                        <a asp-page="/HomePages/Items" asp-route-slug="@item.Slug" class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="service-item rounded pt-3">
+                                <div class="p-4">
+                                    <div class="image-card">
+                                        <img src="~/images/danyal.png" />
+                                    </div>
+                                    <h5>@item.Name</h5>
+                                    <p>@item.Description</p>
                                 </div>
-                                <h5>Quality Food</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
                             </div>
-                        </div>
-                    </div>
+                        </a>
+                    }
 
                 </div>
             </div>
