--- a/BBWebProject/BBWebProject/Pages/Shared/_Layout.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Shared/_Layout.cshtml
@@ -18,14 +18,14 @@
                     @foreach (var item in Model.categories)
                     {
 
-                        <a href="/HomePages/Service" class="dropdown-item">@item.Name</a>
+                        <a asp-page="/HomePages/Items" asp-route-slug="@item.Slug" class="dropdown-item">@item.Name</a>
 
                     }
                 </div>
             </div>
             <a href="/HomePages/Contact" class="nav-item nav-link">Contact</a>
         </div>
-        <a href="/HomePages/Service" class="btn btn-primary py-2 px-4">Place Order</a>
+        <a asp-page="/HomePages/Category" class="btn btn-primary py-2 px-4">Place Order</a>
         
         <svg xmlns="http://www.w3.org/2000/svg" height="40" width="40" style="padding-left:10px;" viewBox="0 0 576 512"><path fill="#e24b4b" d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z" /></svg>
 
