--- a/BBWebProject/BBWebProject/Pages/HomePages/Contact.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Contact.cshtml
@@ -88,15 +88,15 @@
                         <div class="row gy-4">
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Whatsapp</h5>
-                                <p><i class="fab fa-whatsapp text-primary me-2"></i>123456789</p>
+                                <p><i class="fab fa-whatsapp text-primary me-2"></i>@Model.profile.PhoneNumber</p>
                             </div>
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Telephone</h5>
-                                <p><i class="fas fa-phone-alt text-primary me-2"></i>123456789</p>
+                                <p><i class="fas fa-phone-alt text-primary me-2"></i>@Model.profile.PhoneNumber</p>
                             </div>
                             <div class="col-md-4">
                                 <h5 class="section-title ff-secondary fw-normal text-start text-primary">Email</h5>
-                                <p><i class="fas fa-envelope text-primary me-2"></i>tech@example.com</p>
+                                <p><i class="fas fa-envelope text-primary me-2"></i>@Model.profile.Email</p>
                             </div>
                         </div>
                     </div>
