--- a/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
+++ b/BBWebProject/BBWebProject/Pages/HomePages/Items.cshtml
@@ -176,74 +176,116 @@
             </div>
         </div>
         <!-- Navbar & Hero End -->
-        <!-- Service Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Our Foods</h5>
-                    <h1 class="mb-5">Explore Our Food</h1>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 col-sm-6" data-wow-delay="0.1s">
-                        <div class="service-item rounded pt-1">
-                            <div class="p-3">
-                                <div class="image-card">
-                                    <img src="~/images/danyal.png" />
-                                </div>
-                                <h5>Fojita Pizza</h5>
-                                <p>This is Our Special Fojita Pizza</p>
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>Regular</th>
-                                            <th>Large</th>
-                                            <th>Medium</th>
-                                            <th>Small</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1300RS</td>
-                                            <td>1500RS</td>
-                                            <td>1000RS</td>
-                                            <td>800RS</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <select>
-                                                <option class="dropdown-item" value="Small" href="#">Size</option>
-                                                <option class="dropdown-item" value="Small" href="#">Small</option>
-                                                <option class="dropdown-item" value="Medium" href="#">Medium</option>
-                                                <option class="dropdown-item" value="Large" href="#">Large</option>
-                                            </select>
-
-
+        
+            
+        
+            <!-- Variated Item Card Start -->
+            <div class="container-xxl py-5">
+                <div class="container">
+                    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                        <h5 class="section-title ff-secondary text-center text-primary fw-normal">Our Foods</h5>
+                        <h1 class="mb-5">Explore Our Food</h1>
+                    </div>
+                    <div class="row g-4">
+                        @if (Model.status)
+                        {
+                    
+                            @foreach(var item in Model.variated_items)
+                            {
+                            <div class="col-lg-4 col-sm-6" data-wow-delay="0.1s">
+                                <div class="service-item rounded pt-1">
+                                    <div class="p-3">
+                                        <div class="image-card">
+                                            <img src="~/images/@item.Image" />
                                         </div>
-                                        <div class="col-md-6 d-flex justify-content-center align-items-center">
-                                            <button class="CartBtn">
-                                                <span class="IconContainer">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)" class="cart">
-                                                        <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path>
-                                                    </svg>
-                                                </span>
-                                                <p class="text mb-0">Add to Cart</p>
-                                            </button>
+                                        <h5>@item.Title</h5>
+                                        <p>@item.Description</p>
+                                        <table class="table">
+                                            <thead>
+                                                <tr>
+                                                    <th>Regular</th>
+                                                    <th>Large</th>
+                                                    <th>Medium</th>
+                                                    <th>Small</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>@item.Regular RS</td>
+                                                    <td>@item.Large RS</td>
+                                                    <td>@item.Medium RS</td>
+                                                    <td>@item.Small RS</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <select>
+                                                        <option class="dropdown-item" value="Small" href="#">Size</option>
+                                                        <option class="dropdown-item" value="Small" href="#">Small</option>
+                                                        <option class="dropdown-item" value="Medium" href="#">Medium</option>
+                                                        <option class="dropdown-item" value="Large" href="#">Large</option>
+                                                    </select>
+
+
+                                                </div>
+                                                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                                                    <button class="CartBtn">
+                                                        <span class="IconContainer">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)" class="cart">
+                                                                <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path>
+                                                            </svg>
+                                                        </span>
+                                                        <p class="text mb-0">Add to Cart</p>
+                                                    </button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <!-- Repeat similar blocks for other food items -->
+                            }
+                        <!-- Repeat similar blocks for other food items -->
+                    }
+                    else
+                    {
+                        @foreach (var item in Model.Items)
+                        {
+                            <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                                <div class="service-item rounded pt-3">
+                                    <div class="p-4">
+                                        <div class="image-card">
+                                            <img src="~/images/@item.Image" />
+                                        </div>
+                                        <h5>@item.Title</h5>
+                                        <p>@item.Description</p>
+                                    </div>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                            </div>
+                                            <div class="col-md-8 d-flex justify-content-center align-items-center">
+                                                <button class="CartBtn">
+                                                    <span class="IconContainer">
+                                                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" fill="rgb(17, 17, 17)" class="cart">
+                                                            <path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"></path>
+                                                        </svg>
+                                                    </span>
+                                                    <p class="text mb-0">Add to Cart</p>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        }
+                    }
+                </div>
                 </div>
             </div>
-        </div>
-        <!-- Service End -->
-        <!-- Footer Start -->
-        <!-- Footer End -->
+                <!-- Variated Item Card End -->
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
