--- a/BBWebProject/BBWebProject/Pages/Issues/Categories/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/Categories/Index.cshtml
@@ -41,6 +41,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Description</th>
                     <th scope="col">Slug</th>
+                    <th scope="col">Variation</th>
                     <th scope="col">Action</th>
                 </tr>
             </thead>
@@ -51,6 +52,7 @@
                         <td>@item.Name</td>
                         <td>@item.Description</td>
                         <td>@item.Slug</td>
+                        <td>@item.status</td>
                         <td id="fix">
                             <a asp-page="/Issues/Categories/UpdateCategories" asp-route-id="@item.Id" class="btn btn-md btn-primary"><i class="fas fa-edit"></i></a>
                             <form method="post" asp-page-handler="Delete" asp-route-id="@item.Id">
