--- a/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/Index.cshtml
+++ b/BBWebProject/BBWebProject/Pages/Issues/NonVariatedItems/Index.cshtml
@@ -38,6 +38,7 @@
 <body>
     <div class="container">
         <h2 class="text-left">Items Detail</h2>
+        <a asp-page="/Issues/NonVariatedItems/AddItem">Add Item</a>
         <table class="table table-hover">
             <thead>
                 <tr>
